@@ -2,6 +2,7 @@
 
 * Removed the ``cms moderator`` command.
 * Dropped Django < 1.11 support.
+* Removed the translatable content get / set methods from ``CMSPlugin`` model.
 
 
 === 3.5.2 (2018-04-11) ===
